<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_F5F7FB"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".RegisterDoctorActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/_364F6B"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button4"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/button4"
            android:background="#00FFFFFF"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/_4A4A4A"
            android:enabled="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-13dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/bg_img" />

    </RelativeLayout>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:autofillHints="@string/username"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_feather_user"
        android:drawableLeft="@drawable/icon_feather_user"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/full_name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_feather_user"
        android:drawableLeft="@drawable/icon_feather_user"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_email"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_material_lock_outline"
        android:drawableLeft="@drawable/icon_material_lock_outline"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/ssn"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_address_card"
        android:drawableLeft="@drawable/icon_address_card"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/ssn"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/emsn"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_address_card"
        android:drawableLeft="@drawable/icon_address_card"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/emsn"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_teal"
        android:elevation="10dp"
        android:padding="0dp"
        android:shadowColor="@color/_02E9D9"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/_364F6B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/doctor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>