<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_F5F7FB"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/_4A4A4A"
            android:textStyle="bold"
            android:enabled="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/button1"
            android:background="#00FFFFFF"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/_364F6B"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_feather_user"
        android:drawableLeft="@drawable/icon_feather_user"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_material_lock_outline"
        android:drawableLeft="@drawable/icon_material_lock_outline"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_teal"
        android:elevation="10dp"
        android:padding="0dp"
        android:shadowColor="@color/_02E9D9"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/_364F6B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-13dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/bg_img" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>