<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".DiagnoseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/diagnose"
            android:textAllCaps="false"
            android:textColor="@color/_364F6B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/diagnoseInputSpeech"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="no"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/write_down_your_feelings"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:padding="20dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.069" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done_diagnose_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ripple_white"
            android:drawableStart="@drawable/icon_done"
            android:drawableLeft="@drawable/icon_done"
            android:drawablePadding="5dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/_364F6B"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_diagnose_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ripple_white"
            android:drawableStart="@drawable/icon_cancel"
            android:drawableLeft="@drawable/icon_cancel"
            android:drawablePadding="5dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/_364F6B"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>